--- a/des157a/index.html
+++ b/des157a/index.html
@@ -38,7 +38,7 @@
                 <h3>Studios</h3>
                 <ul id="col1-studios">
                     <li><a class="link-name" href="studios/mad-libs/">Mad Libs 2.0</a><a class="link-arrows" href="studios/mad-libs/">></a></li>
-                    <li><a class="link-name" href="">Every Picture</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="studios/every-pictrue/">Every Picture</a><a class="link-arrows" href="studios/every-pictrue/">></a></li>
                     <li><a class="link-name" href="">Game On!</a><a class="link-arrows" href="">></a></li>
                 </ul>
 
