update every picture

--- a/des157a/studios/every-pictrue/index.html
+++ b/des157a/studios/every-pictrue/index.html
@@ -13,6 +13,10 @@
     <title>Every Picture: MU</title>
 </head>
 <body>
+    <header>
+        <h1>DAS</h1>
+        <h1>@UNITRANS</h1>
+    </header>
     <main id="container" class="main-container-layout-loading">
         <div id="mu-container" class="mu-on-start">
             <img src="images/mu-day.jpg" id="mu-top" alt="mu-top" class='imgs start'>
@@ -60,7 +64,8 @@
                     S1143-0.4,1143-0.4H0L0,467.7z"/>
             </svg>
             </div>
-            <img src="images/arrow.svg" alt="left-arrow" id="left-arrow">
+            <!-- <img src="images/arrow.svg" alt="left-arrow" id="left-arrow"> -->
+            <svg id="left-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54.17 54.17"><g id="Layer_2" data-name="Layer 2"><g id="left-arrow" data-name="Layer 1"><path class="cls-1" d="M27.08,0h0a27.09,27.09,0,0,0,0,54.17h0A27.09,27.09,0,1,0,27.08,0ZM21.21,28.67,33.73,35.9a2.5,2.5,0,0,1-1.25,4.66,2.54,2.54,0,0,1-1.25-.33L18.71,33a6.83,6.83,0,0,1,0-11.83l12.52-7.23a2.5,2.5,0,0,1,2.5,4.33L21.21,25.5a1.83,1.83,0,0,0,0,3.17Z"/></g></g></svg>
         </div>
         
         <article>
@@ -78,10 +83,7 @@
                     <img src="images/stop-sign.png" alt="stop-sign">
                     <figcaption>G</figcaption>
                 </figure>
-                <p>Pelican gulper yellow-and-black triplefin, Atlantic eel. Collared dogfish canary rockfish California
-					halibut salmon; southern grayling marlin sind danio guppy boarfish Devario garibaldi ladyfish wahoo
-					false brotula seatrout gurnard, freshwater hatchetfish! Dealfish Bigscale pomfret; elephantnose fish
-					clingfish regal whiptail catfish vendace trout southern smelt.</p>
+                <p>G line is probably the busiest line at MU; It is also the first line I drove when I first went into service. Back to the pre-pandemic time, it was chill and always on time back then. However, things have changed, and it's hard to enjoy the line anymore. B line is one of the shortest lines of all the routes Unitrans are operating. Yet, it's hard to enjoy the crazy amount of stop signs on this route.</p>
             </section>
             <section id="two">
                 <figure>
@@ -92,10 +94,7 @@
                     <img src="images/stop-sign.png" alt="stop-sign">
                     <figcaption>O</figcaption>
                 </figure>
-                <p>Pelican gulper yellow-and-black triplefin, Atlantic eel. Collared dogfish canary rockfish California
-					halibut salmon; southern grayling marlin sind danio guppy boarfish Devario garibaldi ladyfish wahoo
-					false brotula seatrout gurnard, freshwater hatchetfish! Dealfish Bigscale pomfret; elephantnose fish
-					clingfish regal whiptail catfish vendace trout southern smelt.</p>
+                <p>Yes, these are the line that goes to Target. I love this shortest 1-hour shift out of all the MU lines. Basically, everyone gets off at 5th & Cantrill, gets on the bus at 2nd & Target, and enjoys my second car.</p>
             </section>
             <section id="three">
                 <figure>
@@ -106,10 +105,7 @@
                     <img src="images/stop-sign.png" alt="stop-sign">
                     <figcaption>Q</figcaption>
                 </figure>
-                <p>Pelican gulper yellow-and-black triplefin, Atlantic eel. Collared dogfish canary rockfish California
-					halibut salmon; southern grayling marlin sind danio guppy boarfish Devario garibaldi ladyfish wahoo
-					false brotula seatrout gurnard, freshwater hatchetfish! Dealfish Bigscale pomfret; elephantnose fish
-					clingfish regal whiptail catfish vendace trout southern smelt.</p>
+                <p>P & Q are my favorite lines, although it is the entire one-hour shifts. I enjoy seeing people around going around Davis. Some of them get off at Safeway and hop on the bus the next hours. However, sometimes the traffic is horrible. My worst experience was one and half hours for a Q line which suppose to be finished in 50 minutes.</p>
             </section>
             <section id="four">
                 <figure>
@@ -120,10 +116,7 @@
                     <img src="images/stop-sign.png" alt="stop-sign">
                     <figcaption>K</figcaption>
                 </figure>
-                <p>Pelican gulper yellow-and-black triplefin, Atlantic eel. Collared dogfish canary rockfish California
-					halibut salmon; southern grayling marlin sind danio guppy boarfish Devario garibaldi ladyfish wahoo
-					false brotula seatrout gurnard, freshwater hatchetfish! Dealfish Bigscale pomfret; elephantnose fish
-					clingfish regal whiptail catfish vendace trout southern smelt.</p>
+                <p>Those are the lines I barely drive, and I don't like being stuck by the traffic and always running late. However, since I have a lot of tripper shifts, I often get pulled at the second half of the hour because one of them is definitely late.</p>
             </section>
             <section id="five">
                 <figure>
@@ -134,24 +127,27 @@
                     <img src="images/stop-sign.png" alt="stop-sign">
                     <figcaption>F</figcaption>
                 </figure>
-                <p>Pelican gulper yellow-and-black triplefin, Atlantic eel. Collared dogfish canary rockfish California
-					halibut salmon; southern grayling marlin sind danio guppy boarfish Devario garibaldi ladyfish wahoo
-					false brotula seatrout gurnard, freshwater hatchetfish! Dealfish Bigscale pomfret; elephantnose fish
-					clingfish regal whiptail catfish vendace trout southern smelt.</p>
+                <p>I always enjoy driving the F line start-up. I got to see one of the most beautiful sunrises at Davis. Especially Unitrans is thinking to bring the old London bus back to E and F lines. Although I cannot drive it yet, I will be so excited to get trained on it. For E line, it is always really chill. </p>
             </section>
             <section id="six">
                 <figure>
                     <img src="images/stop-sign.png" alt="stop-sign">
                     <figcaption id="caption-tripper">Trippers</figcaption>
                 </figure>
-                <p>Pelican gulper yellow-and-black triplefin, Atlantic eel. Collared dogfish canary rockfish California
-					halibut salmon; southern grayling marlin sind danio guppy boarfish Devario garibaldi ladyfish wahoo
-					false brotula seatrout gurnard, freshwater hatchetfish! Dealfish Bigscale pomfret; elephantnose fish
-					clingfish regal whiptail catfish vendace trout southern smelt.</p>
+                <p>You must be wondering why there are always 2 or 3 buses sitting there doing nothing. Well, because I have to write my code for DES 157a. Actually, Those are the tripper buses; they are there because when the other buses are late due to traffic, construction, or any reason, dispatch will ask them to run a continuous line for that bus so that all the services can be as on time as possible.</p>
             </section>
         </article>
-        <div id="bkg" class="cls-0"></div>
+        <section id="bkg" class="cls-0">
+            <div>
+                <h2>↓</h2>
+                <h3>Das@Unitrans</h3>
+            </div>
+        </section>
     </main>
-    
+    <footer class="footer-loading">
+        <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;"><span>Email</span></a>
+        <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157a/studios/every-pictrue/"><span>Valid HTML 5</span></a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"><span>Valid CSS</span></a>
+    </footer>
 </body>
 </html>
