--- a/des157a/studios/every-pictrue/index.html
+++ b/des157a/studios/every-pictrue/index.html
@@ -21,7 +21,6 @@
         <div id="mu-container" class="mu-on-start">
             <img src="images/mu-day.jpg" id="mu-top" alt="mu-top" class='imgs start'>
             <div id="svg-container"> 
-                <?xml version="1.0" encoding="utf-8"?>
                 <!-- Generator: Adobe Illustrator 25.4.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                 <svg version="1.1" id="mu-trace" class='imgs start' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 1366 1023" style="enable-background:new 0 0 1366 1023;" xml:space="preserve">
@@ -43,7 +42,7 @@
                     v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3c2.7,0,4.9,2.2,4.9,4.9v22.6C1031.6,332.3,1029.4,334.4,1026.7,334.4z"/>
                 <path id="bus-z" class="st1 hotspot-2" d="M510.9,334.4H368.6c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
                     c2.7,0,4.9,2.2,4.9,4.9v22.6C515.7,332.3,513.6,334.4,510.9,334.4z"/>
-                <path id="bus-p" class="st1 hotspot-3" d="M847.9,334.7L706,324.3c-2.7-0.2-4.7-2.5-4.5-5.2l1.6-22.5c0.2-2.7,2.5-4.7,5.2-4.5l141.9,10.4
+                <path id="bus-q" class="st1 hotspot-3" d="M847.9,334.7L706,324.3c-2.7-0.2-4.7-2.5-4.5-5.2l1.6-22.5c0.2-2.7,2.5-4.7,5.2-4.5l141.9,10.4
                     c2.7,0.2,4.7,2.5,4.5,5.2l-1.6,22.5C852.9,332.9,850.6,334.9,847.9,334.7z"/>
                 <path id="bus-e" class="st1 hotspot-5" d="M1034.6,728.3L895,755.8c-2.6,0.5-5.2-1.2-5.7-3.8l-4.4-22.2c-0.5-2.6,1.2-5.2,3.8-5.7l139.6-27.5
                     c2.6-0.5,5.2,1.2,5.7,3.8l4.4,22.2C1039,725.2,1037.2,727.7,1034.6,728.3z"/>
@@ -65,7 +64,7 @@
             </svg>
             </div>
             <!-- <img src="images/arrow.svg" alt="left-arrow" id="left-arrow"> -->
-            <svg id="left-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54.17 54.17"><g id="Layer_2" data-name="Layer 2"><g id="left-arrow" data-name="Layer 1"><path class="cls-1" d="M27.08,0h0a27.09,27.09,0,0,0,0,54.17h0A27.09,27.09,0,1,0,27.08,0ZM21.21,28.67,33.73,35.9a2.5,2.5,0,0,1-1.25,4.66,2.54,2.54,0,0,1-1.25-.33L18.71,33a6.83,6.83,0,0,1,0-11.83l12.52-7.23a2.5,2.5,0,0,1,2.5,4.33L21.21,25.5a1.83,1.83,0,0,0,0,3.17Z"/></g></g></svg>
+            <svg id="left-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54.17 54.17"><g id="Layer_2" data-name="Layer 2"><g data-name="Layer 1"><path class="cls-1" d="M27.08,0h0a27.09,27.09,0,0,0,0,54.17h0A27.09,27.09,0,1,0,27.08,0ZM21.21,28.67,33.73,35.9a2.5,2.5,0,0,1-1.25,4.66,2.54,2.54,0,0,1-1.25-.33L18.71,33a6.83,6.83,0,0,1,0-11.83l12.52-7.23a2.5,2.5,0,0,1,2.5,4.33L21.21,25.5a1.83,1.83,0,0,0,0,3.17Z"/></g></g></svg>
         </div>
         
         <article>
