--- a/des157a/studios/every-pictrue/index.html
+++ b/des157a/studios/every-pictrue/index.html
@@ -146,7 +146,7 @@
     <footer class="footer-loading">
         <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;"><span>Email</span></a>
         <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157a/studios/every-pictrue/"><span>Valid HTML 5</span></a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer"><span>Valid CSS</span></a>
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157a/studios/every-pictrue/"><span>Valid CSS</span></a>
     </footer>
 </body>
 </html>
