change UX, fade photo working in progress

--- a/des157a/studios/every-pictrue/index.html
+++ b/des157a/studios/every-pictrue/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="smoothscroll.js"></script>
+    <script src="smoothscroll.js"defer></script>
     <script src="script.js" defer></script>
     <title>Every Picture: MU</title>
 </head>
@@ -16,10 +16,12 @@
     <header>
         <h1>DAS</h1>
         <h1>@UNITRANS</h1>
+        <h2 id="explore">EXPLORE NOW</h2>
     </header>
     <main id="container" class="main-container-layout-loading">
         <div id="mu-container" class="mu-on-start">
             <img src="images/mu-day.jpg" id="mu-top" alt="mu-top" class='imgs start'>
+            <img src="images/mu-day.jpg" id="mu-top-2" alt="mu-top-2" class='imgs start'>
             <div id="svg-container"> 
                 <!-- Generator: Adobe Illustrator 25.4.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                 <svg version="1.1" id="mu-trace" class='imgs start' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -63,8 +65,8 @@
                     S1143-0.4,1143-0.4H0L0,467.7z"/>
             </svg>
             </div>
-            <!-- <img src="images/arrow.svg" alt="left-arrow" id="left-arrow"> -->
-            <svg id="left-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54.17 54.17"><g id="Layer_2" data-name="Layer 2"><g data-name="Layer 1"><path class="cls-1" d="M27.08,0h0a27.09,27.09,0,0,0,0,54.17h0A27.09,27.09,0,1,0,27.08,0ZM21.21,28.67,33.73,35.9a2.5,2.5,0,0,1-1.25,4.66,2.54,2.54,0,0,1-1.25-.33L18.71,33a6.83,6.83,0,0,1,0-11.83l12.52-7.23a2.5,2.5,0,0,1,2.5,4.33L21.21,25.5a1.83,1.83,0,0,0,0,3.17Z"/></g></g></svg>
+            <!-- <img src="images/arrow.svg" alt="left-arrow" id="left-arrow">
+            <svg id="left-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54.17 54.17"><g id="Layer_2" data-name="Layer 2"><g data-name="Layer 1"><path class="cls-1" d="M27.08,0h0a27.09,27.09,0,0,0,0,54.17h0A27.09,27.09,0,1,0,27.08,0ZM21.21,28.67,33.73,35.9a2.5,2.5,0,0,1-1.25,4.66,2.54,2.54,0,0,1-1.25-.33L18.71,33a6.83,6.83,0,0,1,0-11.83l12.52-7.23a2.5,2.5,0,0,1,2.5,4.33L21.21,25.5a1.83,1.83,0,0,0,0,3.17Z"/></g></g></svg> -->
         </div>
         
         <article>
@@ -138,8 +140,8 @@
         </article>
         <section id="bkg" class="cls-0">
             <div>
-                <h2>↓</h2>
                 <h3>Das@Unitrans</h3>
+                <h2>↓</h2>
             </div>
         </section>
     </main>
