--- a/des157a/studios/pig/index.html
+++ b/des157a/studios/pig/index.html
@@ -59,7 +59,7 @@
             <label for="player-2-input-name" class="label-inactive">Player Two's Name</label>
             <input type="text" id="player-2-input-name" class="input-names">
             <div class="player-info">
-                <h3 id='player-1-name' class="players-name">Player 2</h3>
+                <h3 id='player-2-name' class="players-name">Player 2</h3>
                 <div id="score-2" class="scores">
                     <h4 class="score-text">0/30</h4>
                     <svg id="circle-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
@@ -79,7 +79,7 @@
     <footer>
         <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
         <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157a/studios/pig/">Valid HTML 5</a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157a/studios/pig/">Valid CSS</a>
     </footer>
 
 
