--- a/des157a/studios/pig/index.html
+++ b/des157a/studios/pig/index.html
@@ -17,7 +17,7 @@
             <div id="gameinfo">
                 <div id="gametitle">
                     <h1>Game of PIG</h1>
-                    <p id='gamerules'>There are two players. The player whose turn it is rolls the dice. The total of the roll is added to the current player's score, unless either die comes up as a "one". If this happens, this player's turn is over, and it is the other player’s turn. After each roll, the current player can either roll again, (assuming a "one" was not rolled) or if the current player feels that luck is running thin, they can pass to the other player. The first player to get 30 points or higher wins.<br><br>Oh, and if you roll two "ones" (snake eyes), your current score gets zeroed out. So don’t do that.</p> 
+                    <p id='gamerules'>There are two players. The player whose turn it is rolls the dice. The total of the roll is added to the current player's score, unless either die comes up as a "one". If this happens, this player's score of this turn will not count, and it is the other player’s turn. After each roll, the current player can either roll again to get a higher score, (assuming a "one" was not rolled) or if the current player feels that luck is running thin, they can pass to the other player, (Remember! you can only pass game after two rolls except the first time you roll the dice.) and keep the scores they have now. The first player to get 30 points or higher wins.<br><br>Oh, and if you roll two "ones" (snake eyes), your the score gets zeroed out. So don’t do that.</p> 
 
                     <p id="round-counter">Round 1</p>
                     <p id="instructions">Roll the Dice for</p>
