--- a/des157a/index.html
+++ b/des157a/index.html
@@ -59,8 +59,8 @@
             <section id="col2">
                 <h3>R & D</h3>
                 <ul>
-                    <li><a class="link-name" href="">Project Brief</a><a class="link-arrows" href="">></a></li>
-                    <li><a class="link-name" href="">Digital Comp</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="final/brief.html">Project Brief</a><a class="link-arrows" href="final/brief.html">></a></li>
+                    <li><a class="link-name" href="final/images/comp.png">Digital Comp</a><a class="link-arrows" href="final/images/comp.png">></a></li>
                     <li><a class="link-name" href="">Refined Comp</a><a class="link-arrows" href="">></a></li>
                     <li><a class="link-name" href="">Prototype 1</a><a class="link-arrows" href="">></a></li>
                     <li><a class="link-name" href="">User Test</a><a class="link-arrows" href="">></a></li>
