project brief update

--- a/des157a/final/brief.html
+++ b/des157a/final/brief.html
@@ -22,10 +22,14 @@
         </section>
         <section>
             <h2>Comparison Project 1</h2>
+            <img src="images/pig.png" alt="PIG GAME" width="500px">
+            <a href="http://cs.gettysburg.edu/projects/pig/piggame.html">PIG GAME BY GETTYSBURG &rarr;</a>
             <p>The reason I chose this website is that the rules, and the way the game works. This inspired me to set more rules while users are playing. So the game will more more fun! Also it only have one dice, it give user an option to play with computer.</p>
         </section>
         <section>
             <h2>Comparison Project 2</h2>
+            <img src="images/mahjong.png" alt="MAHJONG GAME" width="500px">
+            <a href="https://www.247mahjong.com">MAHJONG GAME &rarr;</a>
             <p>This Mahjong game is not what I was trying to build, but it give me an idea of the game interface. The Mahjong have different type of pattern for each player. I want to apply this method to the different delivery truck with number on it. It also inspired me to stylish my game more, so it won't looks too official! </p>
         </section>
         <section>
