--- a/des157a/index.html
+++ b/des157a/index.html
@@ -37,40 +37,39 @@
             <section id="col1">
                 <h3>Studios</h3>
                 <ul id="col1-studios">
-                    <li><a class="link-name" href="studios/mad-libs/">Mad Libs 2.0</a><a class="link-arrows" href="studios/mad-libs/">></a></li>
-                    <li><a class="link-name" href="studios/every-pictrue/">Every Picture</a><a class="link-arrows" href="studios/every-pictrue/">></a></li>
-                    <li><a class="link-name" href="studios/pig/">Game On!</a><a class="link-arrows" href="studios/pig/">></a></li>
+                    <li><a class="link-name" href="studios/mad-libs/">Mad Libs 2.0</a><a class="link-arrows" href="studios/mad-libs/">&gt;</a></li>
+                    <li><a class="link-name" href="studios/every-pictrue/">Every Picture</a><a class="link-arrows" href="studios/every-pictrue/">&gt;</a></li>
+                    <li><a class="link-name" href="studios/pig/">Game On!</a><a class="link-arrows" href="studios/pig/">&gt;</a></li>
                 </ul>
 
                 <h3>Experiments</h3>
                 <ul id="col1-experiments">
-                    <li><a class="link-name" href="exp/exp1.html">Exp 1</a><a class="link-arrows" href="exp/exp1.html">></a></li>
-                    <li><a class="link-name" href="exp/exp2.html">Exp 2</a><a class="link-arrows" href="exp/exp2.html">></a></li>
+                    <li><a class="link-name" href="exp/exp1.html">Exp 1</a><a class="link-arrows" href="exp/exp1.html">&gt;</a></li>
+                    <li><a class="link-name" href="exp/exp2.html">Exp 2</a><a class="link-arrows" href="exp/exp2.html">&gt;</a></li>
                 </ul>
 
                 <h3>Writing</h3>
                 <ul id="col1-writing">
-                    <li><a class="link-name" href="lj/lj4/index.html">Learning Journal Four</a><a class="link-arrows" href="lj/lj4/index.html">></a></li>
-                    <li><a class="link-name" href="lj/lj3/index.html">Learning Journal Three</a><a class="link-arrows" href="lj/lj3/index.html">></a></li>
-                    <li><a class="link-name" href="lj/lj2/index.html">Learning Journal Two</a><a class="link-arrows" href="lj/lj2/index.html">></a></li>
-                    <li><a class="link-name" href="lj/lj1/index.html">Learning Journal One</a><a class="link-arrows" href="lj/lj1/index.html">></a></li>
+                    <li><a class="link-name" href="lj/lj4/index.html">Learning Journal Four</a><a class="link-arrows" href="lj/lj4/index.html">&gt;</a></li>
+                    <li><a class="link-name" href="lj/lj3/index.html">Learning Journal Three</a><a class="link-arrows" href="lj/lj3/index.html">&gt;</a></li>
+                    <li><a class="link-name" href="lj/lj2/index.html">Learning Journal Two</a><a class="link-arrows" href="lj/lj2/index.html">&gt;</a></li>
+                    <li><a class="link-name" href="lj/lj1/index.html">Learning Journal One</a><a class="link-arrows" href="lj/lj1/index.html">&gt;</a></li>
                 </ul>
             </section>
             <section id="col2">
                 <h3>R & D</h3>
                 <ul>
-                    <li><a class="link-name" href="final/brief.html">Project Brief</a><a class="link-arrows" href="final/brief.html">></a></li>
-                    <li><a class="link-name" href="final/images/comp.png">Digital Comp</a><a class="link-arrows" href="final/images/comp.png">></a></li>
-                    <li><a class="link-name" href="">Refined Comp</a><a class="link-arrows" href="">></a></li>
-                    <li><a class="link-name" href="">Prototype 1</a><a class="link-arrows" href="">></a></li>
-                    <li><a class="link-name" href="">User Test</a><a class="link-arrows" href="">></a></li>
-                    <li><a class="link-name" href="">User Test Results</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="final/brief.html">Project Brief</a><a class="link-arrows" href="final/brief.html">&gt;</a></li>
+                    <li><a class="link-name" href="final/images/comp.png">Digital Comp</a><a class="link-arrows" href="final/images/comp.png">&gt;</a></li>
+                    <li><a class="link-name" href="final/prototype-1/">Prototype 1</a><a class="link-arrows" href="final/prototype-1/">&gt;</a></li>
+                    <li><a class="link-name" href="">User Test</a><a class="link-arrows" href="">&gt;</a></li>
+                    <li><a class="link-name" href="">User Test Results</a><a class="link-arrows" href="">&gt;</a></li>
                 </ul>
             </section>
             <section id="col3">
                 <h3 id="final"><span>Final</span><span id="final-bar"></span></h3>
                 <ul>
-                    <li><a class="link-name" href="">Final Project</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="final/">Final Project</a><a class="link-arrows" href="final/">&gt;</a></li>
                 </ul>
             </section>
         </main> 
