--- a/des157a/final/index.html
+++ b/des157a/final/index.html
@@ -27,7 +27,16 @@
         <div id="gamerules">
             <div>
                 <h2>Boost Your Delivery</h2>
-                <p id='gamerules-text'>There are Four delivery trucks. Each of the players will choose a truck to start the game. For the trucks to get to the destination(total of 100 miles), players need to fill the gas for the trucks.<br><br>Every round, the players have three options:<br>1. Spin the number and fill the truck unless any of the three numbers is 1. If it happens, the truck will not get any gas this round. <strong>(You can spin as many time as you want. If you like the score, click FILL to store the scores from this round.)</strong><br>2. You think you are out of luck and just wanna fill 10 miles of gas.<br>3. If you think you are totally fine with your progress, you can drive PASS by.<br><br>The first truck arrives destination wins, 100 miles.<br><br>Oh, and if two or more numbers are 1, the truck will break and return to the starting point. So don't do that.</p>
+                <p id='gamerules-text'>This is a multiplayer game for <strong>2-4 players.</strong> Each of the players will be assigned a delivery truck to start the game. <strong>The goal is to get trucks to the destination(total of 100 miles)</strong>, to do so, players need to boost the mileage for the trucks. The first truck arrives destination wins!<br><br>Each round, the players have two options:
+                    <ol>
+                        <li><strong>SPIN the number and move the truck forward by click FILL button.</strong>(Spin as many time as you want to get the best score. ONLY the last score will be stored.) However, there are risks:
+                            <ul>
+                                <li>If any of the three numbers is 1, the truck will not for this round</li>
+                                <li>If two or more numbers are 1, the truck will break and return to the starting point. So don't do that.</li>
+                            </ul></li>
+                        <li><strong>Move the truck forward for 10 miles. (no risk)</strong></li>
+                    </ol>
+                </p>
                 <button id="confirmed-gamerules">I Got It.</button>  
             </div>           
         </div>
@@ -50,8 +59,8 @@
             <audio id="audio-10">
                 <source src="audios/10.mp3" type="audio/mpeg">
             </audio>
-            <audio id="audio-pass">
-                <source src="audios/pass.mp3" type="audio/mpeg">
+            <audio id="audio-confirm">
+                <source src="audios/confirm.mp3" type="audio/mpeg">
             </audio>
             <audio id="audio-restart">
                 <source src="audios/restart.mp3" type="audio/mpeg">
@@ -196,8 +205,8 @@
                         <p id="current-player-name">Player 1</p>
                     </div>
                     <div id="game-control">
-                        <button id="btn-spin" class="actions-btn">SPIN</button>
                         <button id="btn-10" class="actions-btn">+10</button>
+                        <button id="btn-spin" class="actions-btn">SPIN</button>
                         <button id="btn-fill" class="actions-btn">
                             <svg id="pump-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 57.13 60.18" width: 100px; height: 100px;>
                                 <g id="pump">
