--- a/des157a/final/index.html
+++ b/des157a/final/index.html
@@ -27,7 +27,7 @@
         <div id="gamerules">
             <div>
                 <h2>Boost Your Delivery</h2>
-                <p id='gamerules-text'>This is a multiplayer game for <strong>2-4 players.</strong> Each of the players will be assigned a delivery truck to start the game. <strong>The goal is to get trucks to the destination(total of 100 miles)</strong>, to do so, players need to boost the mileage for the trucks. The first truck arrives destination wins!<br><br>Each round, the players have two options:
+                <p id='gamerules-text'>This is a multiplayer game for <strong>2-4 players.</strong> Each of the players will be assigned a delivery truck to start the game. <strong>The goal is to get trucks to the destination(total of 100 miles)</strong>, to do so, players need to boost the mileage for the trucks. The first truck arrives destination wins!<br><br>Each round, the players have two options:</p>
                     <ol>
                         <li><strong>SPIN the number and move the truck forward by click FILL button.</strong>(Spin as many time as you want to get the best score. ONLY the last score will be stored.) However, there are risks:
                             <ul>
@@ -36,7 +36,6 @@
                             </ul></li>
                         <li><strong>Move the truck forward for 10 miles. (no risk)</strong></li>
                     </ol>
-                </p>
                 <button id="confirmed-gamerules">I Got It.</button>  
             </div>           
         </div>
@@ -74,7 +73,6 @@
         </div>
         <div id="game-intro">
             <h1 id="gametitle">Boost Your Delivery</h1>
-            <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 26.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
             <svg version="1.1" id="intro-background" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 1366 768" style="enable-background:new 0 0 1366 768;" xml:space="preserve">
@@ -111,9 +109,9 @@
                 <div>
                     <h3 >How Many Players Are Playing?</h3>
                     <div id="choose-truck">
-                        <img src="images/Truck-2.svg" alt="2" width="100px">
-                        <img src="images/Truck-3.svg" alt="3" width="100px">
-                        <img src="images/Truck-4.svg" alt="4" width="100px">
+                        <img src="images/Truck-2.svg" alt="2" width="100">
+                        <img src="images/Truck-3.svg" alt="3" width="100">
+                        <img src="images/Truck-4.svg" alt="4" width="100">
                     </div>
                     <div id="players-amount-text"><p>2</p><p>3</p><p>4</p></div>
                     <button id="players-amount-confirm">Start!</button>
@@ -181,13 +179,13 @@
                     </div>
                     <div id="player-4-progress" class="players-progress-area">
                         <img id="player-icon-4" class="players-icon" src="images/Truck-4.svg" alt="player-icon-4">
-                        <svg id="circle-2" class="progress-bars" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <svg id="circle-4" class="progress-bars" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                             <circle class="circle-background" cx='50%' cy='50%' r='30%'/>
                             <circle class="circle-progress" cx='50%' cy='50%' r='30%'/>
                         </svg>
                     </div>
                 </div>
-                <button id="mute-button" class="gamecontrols unmuted"><img src="images/sound.svg" alt="Sound Icon" width="30px">MUTE</button>
+                <button id="mute-button" class="gamecontrols unmuted"><img src="images/sound.svg" alt="Sound Icon" width="30">MUTE</button>
             </div>
     
             <div id="col-3" class="cols">
@@ -208,7 +206,7 @@
                         <button id="btn-10" class="actions-btn">+10</button>
                         <button id="btn-spin" class="actions-btn">SPIN</button>
                         <button id="btn-fill" class="actions-btn">
-                            <svg id="pump-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 57.13 60.18" width: 100px; height: 100px;>
+                            <svg id="pump-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 57.13 60.18">
                                 <g id="pump">
                                     <path class="pump" d="M34.13,45.72l-4.8-10.41A1.45,1.45,0,0,0,28,34.47H25.89a3.55,3.55,0,0,1-2.51-6.07l3.72-3.73a3.57,3.57,0,0,1,5,0l4.6,4.6V10.61A10.61,10.61,0,0,0,26.13,0H10.61A10.61,10.61,0,0,0,0,10.61v39A10.61,10.61,0,0,0,10.61,60.18H26.13A10.61,10.61,0,0,0,36.74,49.56V47.73h0A3.59,3.59,0,0,1,34.13,45.72ZM5.91,12.2a7,7,0,0,1,7-7h11a7,7,0,0,1,0,14h-11A7,7,0,0,1,5.91,12.2Z"/>
                                     <path class="pump" d="M56.11,30.49c-2.52-7.14-9.64-14.42-17.25-18.22v4.82c5.92,3.51,11.3,9.29,13.25,14.82,1.22,3.45,1,6.31-.67,8.5a7.06,7.06,0,0,1-5.52,2.43,4.35,4.35,0,0,1-1.69-.45l-3,3a8.1,8.1,0,0,0,4.52,1.65h.48A11.3,11.3,0,0,0,54.81,43C57.37,39.63,57.82,35.31,56.11,30.49Z"/>
@@ -225,8 +223,8 @@
     
     <footer>
         <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
-        <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157a/final/user-test/">Valid HTML 5</a>
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157a/final/user-test/">Valid CSS</a>
+        <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157a/final/">Valid HTML 5</a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://dasliao.github.io/des157a/final/">Valid CSS</a>
     </footer>
 
 
