update user test result

--- a/des157a/final/index.html
+++ b/des157a/final/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game of PIG</title>
+    <title>Boost Your Delivery</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -27,7 +27,7 @@
         <div id="gamerules">
             <div>
                 <h2>Boost Your Delivery</h2>
-                <p id='gamerules-text'>This is a multiplayer game for <strong>2-4 players.</strong> Each of the players will be assigned a delivery truck to start the game. <strong>The goal is to get trucks to the destination(total of 100 miles)</strong>, to do so, players need to boost the mileage for the trucks. The first truck arrives destination wins!<br><br>Each round, the players have two options:</p>
+                <p id='gamerules-text'>This is a multiplayer game for <strong>2-4 players.</strong> Each of the players will be assigned a delivery truck to start the game. <strong>The goal is to get trucks to the destination(total of 100 miles)</strong>, to do so, players need to boost the mileage for the trucks. The first truck arrives destination wins! Each round, the players have two options:</p>
                     <ol>
                         <li><strong>SPIN the number and move the truck forward by click FILL button.</strong>(Spin as many time as you want to get the best score. ONLY the last score will be stored.) However, there are risks:
                             <ul>
@@ -36,6 +36,8 @@
                             </ul></li>
                         <li><strong>Move the truck forward for 10 miles. (no risk)</strong></li>
                     </ol>
+                    <br>
+                    <br>
                 <button id="confirmed-gamerules">I Got It.</button>  
             </div>           
         </div>
