--- a/des157a/index.html
+++ b/des157a/index.html
@@ -63,7 +63,7 @@
                     <li><a class="link-name" href="final/images/comp.png">Digital Comp</a><a class="link-arrows" href="final/images/comp.png">&gt;</a></li>
                     <li><a class="link-name" href="final/prototype-1/">Prototype 1</a><a class="link-arrows" href="final/prototype-1/">&gt;</a></li>
                     <li><a class="link-name" href="final/user-test/">User Test</a><a class="link-arrows" href="final/user-test/">&gt;</a></li>
-                    <li><a class="link-name" href="">User Test Results</a><a class="link-arrows" href="">&gt;</a></li>
+                    <li><a class="link-name" href="final/user-test-result.html">User Test Results</a><a class="link-arrows" href="final/user-test-result.html">&gt;</a></li>
                 </ul>
             </section>
             <section id="col3">
