--- a/des157b/index.html
+++ b/des157b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Das Github Home</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1>This is my main Github Page</h1>
-    <p><a href="des157a/index.html">DES 157A</a></p>
-    <p><a href="des157b/index.html">DES 157B</a></p>
     
 </body>
 </html>
